added the new PWA setup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel='manifest' href='/manifest.webmanifest'>
     <title>Jay Swaminarayan</title>
 
     <link href="https://fonts.googleapis.com/css?family=Signika&display=swap" rel="stylesheet">
@@ -237,6 +238,28 @@ function read_value() {
   });
 }
   
+ </script>
+ <script>
+  // This is the "Offline page" service worker
+
+// Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+// Check compatibility for the browser we're running this in
+if ("serviceWorker" in navigator) {
+  if (navigator.serviceWorker.controller) {
+    console.log("[PWA Builder] active service worker found, no need to register");
+  } else {
+    // Register the service worker
+    navigator.serviceWorker
+      .register("pwabuilder-sw.js", {
+        scope: "./"
+      })
+      .then(function (reg) {
+        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+      });
+  }
+}
+
  </script>
 
     <!--Scripts external non of use you can delete -->
