--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='manifest' href='/manifest.webmanifest'>
+    <link rel='manifest' href='manifest.webmanifest'>
     <title>Jay Swaminarayan</title>
 
     <link href="https://fonts.googleapis.com/css?family=Signika&display=swap" rel="stylesheet">
