--- a/index.html
+++ b/index.html
@@ -251,9 +251,7 @@ if ("serviceWorker" in navigator) {
   } else {
     // Register the service worker
     navigator.serviceWorker
-      .register("pwabuilder-sw.js", {
-        scope: "./"
-      })
+      .register("pwabuilder-sw.js")
       .then(function (reg) {
         console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
       });
