--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='manifest' href='manifest.webmanifest.json'>
+    <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/xM03bQROB4ROn4vktK5-rh-O1IgHFaArD0eS7YcLTG18RAoTvVSuF0exuPt-H6pa6H-TApLcgi4umOkMoo09Ix-gpponHfwkjB3OXl01ICx4XcWEkgaW9MPs7QGlDsT_iadKmaPCMzj90I4O3JrT84Vr-qr8I3yiz5eR-ZlE3k5mHKcWrHNuqqWJihjWDw4BOfAKvHb2H9BR6G_TUj7x5rHcxkHA79BXGH_pkCltl2vdypBDsGd0HZBOeLlmZUa3efmeNlx9W96HfzLdOzmKtzzQi50vlVKmgOtVDUO36KitvdcbjXot1qHQgFmCBXQ7IJ2aikDcPNZFGEVIFRlpZksyccvp1cWdg693iYi_N6U3K5ei4J74za0WDbGntLlPDdVPsru-yo9Guoh3Km-0g4plAC869Fp4NHLw3uaL3xV7R4ug_-FCPNY0L9XHViblLMCMKRnK36josUapvZ0eFmP1wY0pND7bXycwm8IiTwLRLTxH7-f25EYvcHhyHWWqnDWd74sLT5micj-sRVp9Rp65LxzFVn23jh3lWIrtPVsjkFgOSON7yZ8xGaiYpnHl07j1kD8dC78zLmIYJsEonpeMyw7fglyPdz4OECgFf8kBoweu6kT5ZjZmn9SXBJ7FQkcZ2QaIaBex6uplzlyCzj9e2pzDyOv1RzpIzMoPtP-kKgSBwdTYQckIZc3J6qXY9-dEOaUVJbamlX8BD7VblLgUYw">
     <title>Jay Swaminarayan</title>
 
     <link href="https://fonts.googleapis.com/css?family=Signika&display=swap" rel="stylesheet">
