--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#317EFB"/>
+	<script data-ad-client="ca-pub-5659963957549282" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script type="application/javascript">
+	var doNotTrack = false;
+	if (!doNotTrack) {
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-165932508-1', 'auto');
+
+		ga('send', 'pageview');
+	}
+	</script>
     <link rel='manifest' href='manifest.webmanifest.json'>
     <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/xM03bQROB4ROn4vktK5-rh-O1IgHFaArD0eS7YcLTG18RAoTvVSuF0exuPt-H6pa6H-TApLcgi4umOkMoo09Ix-gpponHfwkjB3OXl01ICx4XcWEkgaW9MPs7QGlDsT_iadKmaPCMzj90I4O3JrT84Vr-qr8I3yiz5eR-ZlE3k5mHKcWrHNuqqWJihjWDw4BOfAKvHb2H9BR6G_TUj7x5rHcxkHA79BXGH_pkCltl2vdypBDsGd0HZBOeLlmZUa3efmeNlx9W96HfzLdOzmKtzzQi50vlVKmgOtVDUO36KitvdcbjXot1qHQgFmCBXQ7IJ2aikDcPNZFGEVIFRlpZksyccvp1cWdg693iYi_N6U3K5ei4J74za0WDbGntLlPDdVPsru-yo9Guoh3Km-0g4plAC869Fp4NHLw3uaL3xV7R4ug_-FCPNY0L9XHViblLMCMKRnK36josUapvZ0eFmP1wY0pND7bXycwm8IiTwLRLTxH7-f25EYvcHhyHWWqnDWd74sLT5micj-sRVp9Rp65LxzFVn23jh3lWIrtPVsjkFgOSON7yZ8xGaiYpnHl07j1kD8dC78zLmIYJsEonpeMyw7fglyPdz4OECgFf8kBoweu6kT5ZjZmn9SXBJ7FQkcZ2QaIaBex6uplzlyCzj9e2pzDyOv1RzpIzMoPtP-kKgSBwdTYQckIZc3J6qXY9-dEOaUVJbamlX8BD7VblLgUYw">
     <title>Jay Swaminarayan</title>
